@@ -12,7 +12,8 @@
 2000-08-31  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* Cleaning up Ireg constructors, working on 'fields'.
-
+	* First support for fields.  More body shapes added.
+	
 2000-08-30  Jeff Freedman  <jeff@patches.simutech.com>
 
 	* Actually from Derek Liauw Kie Fa:  New 2X scaling code.
